--- a/Lab3-assignment-sentiment.ipynb
+++ b/Lab3-assignment-sentiment.ipynb
@@ -75,50 +75,23 @@
     "INPUT SENTENCE 1 I love apples\n",
     "VADER OUTPUT {'neg': 0.0, 'neu': 0.192, 'pos': 0.808, 'compound': 0.6369}\n",
     "\n",
-    "expl: This sentence is clearly positive. The word “love” is strongly positive in the VADER lexicon. There is no negation or modifier, so the sentiment comes through cleanly. The neutral part likely comes from “apples,” which has no emotional charge. The compound score confirms a strongly positive tone.\n",
-    "\n",
-    "\n",
     "INPUT SENTENCE 2 I don't love apples\n",
     "VADER OUTPUT {'neg': 0.627, 'neu': 0.373, 'pos': 0.0, 'compound': -0.5216}\n",
-    "\n",
-    "expl: This is a good example of how VADER handles negation. The word “don’t” reverses the sentiment of “love,” and VADER correctly adjusts the score, treating the sentence as negative overall. The result is accurate and reflects how sentiment changes when it is negated.\n",
-    "\n",
-    "\n",
     "\n",
     "INPUT SENTENCE 3 I love apples :-)\n",
     "VADER OUTPUT {'neg': 0.0, 'neu': 0.133, 'pos': 0.867, 'compound': 0.7579}\n",
     "\n",
-    "expl: This is similar to sentence 1 but the smiley face adds a positive emotional cue. VADER recognizes emojis like :-) as positive indicators and boosts the score so accordingly. That’s why the positive and compound scores are slightly higher than in sentence 1.\n",
-    "\n",
-    "\n",
-    "\n",
     "INPUT SENTENCE 4 These houses are ruins\n",
     "VADER OUTPUT {'neg': 0.492, 'neu': 0.508, 'pos': 0.0, 'compound': -0.4404}\n",
-    "\n",
-    "expl: The word “ruins” implies damage or decay, which VADER interprets as negative. The rest of the sentence is neutral, which explains the mix of neutral and negative values. This is a fair assessment of a slightly negative sentence.\n",
-    "\n",
-    "\n",
     "\n",
     "INPUT SENTENCE 5 These houses are certainly not considered ruins\n",
     "VADER OUTPUT {'neg': 0.0, 'neu': 0.51, 'pos': 0.49, 'compound': 0.5867}\n",
     "\n",
-    "expl: Although the word “ruins” is typically negative, the sentence as a whole denies that these houses are ruins. VADER successfully detects the negation structure and avoids assigning negative sentiment. Interestingly, it even interprets the sentence as slightly positive which is likely due to the phrase “certainly not” which acts as an emphatic denial.\n",
-    "\n",
-    "\n",
-    "\n",
     "INPUT SENTENCE 6 He lies in the chair in the garden\n",
     "VADER OUTPUT {'neg': 0.286, 'neu': 0.714, 'pos': 0.0, 'compound': -0.4215}\n",
     "\n",
-    "expl: This result is misleading. The sentence is neutral, describing someone reclining, but VADER likely misintterprets “lies” as the verb “to lie” which is negattive in its lexicon. This shows a common limitation: VADER cannot disambiguate word meanings based on context.\n",
-    "\n",
-    "\n",
-    "\n",
     "INPUT SENTENCE 7 This house is like any house\n",
     "VADER OUTPUT {'neg': 0.0, 'neu': 0.667, 'pos': 0.333, 'compound': 0.3612}\n",
-    "\n",
-    "expl: This sentence just says that the house is nothing special, its normal, like all the others. So, the meaning is neutral. However, VADER gives it a slight positive score likely because of the word “like” which is often positive in other contexts. Here, though “like” is being used as a comparison, not as an expression of liking. this is a another context issue in VADER's interpretation we found.\n",
-    "\n",
-    "\n",
     "```"
    ]
   },
@@ -161,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,9 +152,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 {'sentiment_label': 'Positive', 'text_of_tweet': 'Be sure to tune in and watch Donald Trump on Late Night with David Letterman as he presents the Top Ten List tonight!', 'tweet_url': 'https://twitter.com/realDonaldTrump/status/1698308935'}\n"
+     ]
+    }
+   ],
    "source": [
     "for id_, tweet_info in my_tweets.items():\n",
     "    print(id_, tweet_info)\n",
@@ -201,10 +182,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
     "def vader_output_to_label(vader_output):\n",
     "    \"\"\"\n",
     "    map vader output e.g.,\n",
@@ -235,10 +219,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "    negative       0.50      0.33      0.40        12\n",
+      "     neutral       0.60      0.45      0.51        20\n",
+      "    positive       0.48      0.72      0.58        18\n",
+      "\n",
+      "    accuracy                           0.52        50\n",
+      "   macro avg       0.53      0.50      0.50        50\n",
+      "weighted avg       0.53      0.52      0.51        50\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
+    "analyzer = SentimentIntensityAnalyzer()\n",
     "tweets = []\n",
     "all_vader_output = []\n",
     "gold = []\n",
@@ -249,14 +251,90 @@
     "\n",
     "for id_, tweet_info in my_tweets.items():\n",
     "    the_tweet = tweet_info['text_of_tweet']\n",
-    "    vader_output = ''# run vader\n",
-    "    vader_label = ''# convert vader output to category\n",
+    "    vader_output = analyzer.polarity_scores(the_tweet) # run vader\n",
+    "    vader_label = vader_output_to_label(vader_output) # convert vader output to category\n",
     "    \n",
     "    tweets.append(the_tweet)\n",
     "    all_vader_output.append(vader_label)\n",
-    "    gold.append(tweet_info['sentiment_label'])\n",
+    "    gold.append(tweet_info['sentiment_label'].strip().lower()) # Since the json file contained capitilized labels.\n",
     "    \n",
-    "# use scikit-learn's classification report"
+    "# use scikit-learn's classification report\n",
+    "print(classification_report(gold, all_vader_output))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3A:\n",
+    " \n",
+    "* [2.5 points] a. Perform a quantitative evaluation. Explain the different scores, and explain which scores are most relevant and why.\n",
+    "\n",
+    "The precision measures for each lable (negative, neutral, positive), how many predictions actually were accruate on target. \n",
+    "\n",
+    "For negative, 50% of the tweet predictions that were marked as negative were actually negative.\n",
+    "For neutral, 60% of the tweet predictions that were marked as neutral were actually neutral.\n",
+    "For positive, 48% of the tweet predictions that were marked as positive were actually postive.\n",
+    "\n",
+    "The recall measures for each lable (negative, neutral, positive) the ability of idenitfing the correct label based on the tweet information.\n",
+    "\n",
+    "For negative, 33% of the negative tweets were correcly indentified.\n",
+    "For neutral, 45% of the neutral tweets were correcly indentified.\n",
+    "For positive, 72% of the postive tweets were correcly indentified.\n",
+    "\n",
+    "The f1-score measures for each lable (negative, neutral, positive) the mean of precision and recall. f1-score indicates a balance measurement.\n",
+    "\n",
+    "For negative, 40% highlights a poorly preformance.\n",
+    "For neutral, 51% highlights a monderate preformance.\n",
+    "For positive, 58% highlights a better preformance relatively.\n",
+    "\n",
+    "\n",
+    "The support provides an overview of the acrtual amount of negativve, neautral and positve(12,20,18) tweets.\n",
+    "\n",
+    "Regarding the accuracy, the model was able to correctly classify 52% of all the tweets.\n",
+    "\n",
+    "Macro avg represents the average metrics equally over the classes, while weighted avg illustrats the average meterics weighted by support.\n",
+    "\n",
+    "# Most relevant scores:\n",
+    "F1-score provided a view over the balace between precision and recall, this is important when classes are imbalanaced.\n",
+    "Weighted avg provided a more accruacte view, since wieghted avg took imbalancing inaccount compared to macro avg.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3B:\n",
+    " \n",
+    "\n",
+    "\n",
+    "* [2.5 points] b. Perform an error analysis: select 10 positive, 10 negative and 10 neutral tweets that are not correctly classified and try to understand why. Refer to the VADER-rules and the VADER-lexicon. Of course, if there are less than 10 errors for a category, you only have to check those. For example, if there are only 5 errors for positive tweets, you just describe those.\n",
+    "\n",
+    "\n",
+    "After running VADER on my our tweets, I looked at the ones that were classified incorrectly. Per sentiment class (positive, negative, neutral), I picked up to 10 examples to see where things went wrong and why VADER made those mistakes.\n",
+    "\n",
+    "examples:\n",
+    "Positive tweet predicted as negative:\n",
+    "\"He was a great friend and a spectacular entertainer. It’s a devastating loss!\"\n",
+    "\n",
+    "Why wrong? Even though the overall message is positive and emotional, VADER focuses too much on words like “devastating” and “loss” which are strongly negative in its lexicon.\n",
+    "\n",
+    "Neutral tweet predicted as positive:\n",
+    "\"Read an excerpt from Think Like A Champion by Donald J. Trump.\"\n",
+    "\n",
+    "Why wrong? The word “champion” sounds very positive to VADER, but here it's just part of a book title. the tweet itself doesnt express any real opinion.\n",
+    "\n",
+    "Negative tweet predicted as neutral:\n",
+    "\"China is neither an ally or a friend--they want to beat us and own our country.\"\n",
+    "\n",
+    "Why wrong? This is clearly a negative statement but because VADER doesnt fully understand tone or context it doesnt pick up how strong this tweet realy is.\n",
+    "\n",
+    "Most of these mistakes happened because VADER only looks at individual word scores from its lexicon. It doesnt consider how the words are used together or what the full sentence means."
    ]
   },
   {
@@ -283,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
